--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+}
+html,
+body {
+    width: 100vw;
+    height: 50vh;
+    background-color: #CCC;
+}
+.align-center{
+    margin: 15px;
+    border: 1px dashed #CCC;
+}
