--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -1,6 +1,6 @@
-.main-header {
-        background-color: rgb(235, 228, 228);
-        display: grid;
-        grid-template-columns: 1fr 6fr 2fr;
-        height: 100%;
-    }
+.nav-buttons {
+    margin-right: 10px;
+}
+.toolbar {
+    height: 100%;
+}
