--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Assignment 2</title>
-</head>
-<body>
-  <!-- <header class="main-header">
-    <span class="align-center">r1c1</span>
-    <div id="banner" class="align-center" (mouseenter)="showGreeting()" (mouseleave)="resetGreeting()">r1c2</div>
-    <div class="align-center">r1c3</div>
-  </header>    -->
-    <!-- <div class="main-container-grid">
-  <div class="align-center">r2c1</div>
-  <div class="align-center">r2c2</div>
-  <div class="align-center">r2c3</div>
-    </div> -->
-    <!-- <footer class="main-footer">
-        <div class="align-center">r3c1</div>
-        <div class="align-center">r3c2</div>
-        <div class="align-center">r3c3</div>
-        </footer> -->
-    <main-header></main-header>
-       <main-content></main-content>
-       <main-footer></main-footer> 
-</body>
-</html>
+<div class="main-container">
+  <main-header></main-header>
+  <!-- <main-content></main-content> -->
+  <router-outlet class="main-outlet"></router-outlet>
+  <main-footer></main-footer>
+</div>
