--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,53 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 /* You can add global styles to this file, and also import other style files */
-* {
+*{
     margin: 0px;
     padding: 0px;
     position: relative;
 }
+
 html,
 body {
     width: 100vw;
     height: 50vh;
     background-color: #CCC;
 }
+
+.main-container {
+    display: grid;
+    height: 30%;
+    grid-template-rows: 1fr 5fr 2fr
+}
+
+.row-one {
+    display: grid;
+    grid-template-columns: 1fr 5fr 2fr;
+    height: 10%;
+    width: 100%;
+}
+.row-two, 
+.row-three {
+    display: grid;
+    grid-template-columns: 1fr 5fr 2fr;
+    height: 100%;
+    width: 100%;
+}
+
+.row-two {
+    background-color: aliceblue;
+}
+
+
+.container-padding {
+    margin: 12px;
+    border: 1px dashed #a69f9f
+}
 .align-center{
     margin: 15px;
     border: 1px dashed #CCC;
 }
+html, body { height: 90%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
